--- a/css/main.css
+++ b/css/main.css
@@ -5,12 +5,10 @@ body {
   line-height: 1.6;
 }
 .container-asym {
-  padding-left: 120px;
-  padding-right: 120px;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 1400px;
+  max-width: 1200px; /* kies zelf: bv. 1000px voor smaller, 1400px voor breder */
+  margin: 0 auto;
 }
+
 
 @media (max-width: 768px) {
   .container-asym {
@@ -32,7 +30,12 @@ a:hover {
   text-align: right;
   margin-top: 1rem;
 }
-
+.hero-section img {
+  display: block;
+  width: 100%;      /* altijd volle breedte */
+  height: auto;     /* geen vervorming */
+  margin: 0 auto;   /* netjes centreren */
+}
 .hero-title {
   font-size: 1.2rem; /* titel kleiner */
   font-weight: 500;
